// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Index should fail to login (invalid header) 1`] = `
<DocumentFragment>
  <div
    class="MuiSnackbar-root MuiSnackbar-anchorOriginBottomCenter makeStyles-content-64"
  >
    <div
      aria-describedby="client-snackbar"
      class="MuiPaper-root MuiSnackbarContent-root makeStyles-warning-89 makeStyles-content-64 MuiPaper-elevation6"
      direction="up"
      role="alert"
      style="opacity: 1; transform: scale(1, 1); transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,transform 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    >
      <div
        class="MuiSnackbarContent-message"
      >
        <span
          class="makeStyles-message-92"
          id="client-snackbar"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root makeStyles-icon-90 makeStyles-iconVariant-91"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"
            />
          </svg>
          Invalid header
        </span>
      </div>
      <div
        class="MuiSnackbarContent-action"
      >
        <button
          aria-label="close"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root makeStyles-icon-90"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    class="makeStyles-wrap-65"
  >
    <header
      class="MuiPaper-root MuiAppBar-root MuiAppBar-positionStatic MuiAppBar-colorPrimary makeStyles-root-68 MuiPaper-elevation4"
    >
      <div
        class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
      >
        <h6
          class="MuiTypography-root makeStyles-title-70 MuiTypography-h6"
        >
          予約システム
        </h6>
        <div
          class="makeStyles-grow-71"
        />
        <button
          class="MuiButtonBase-root MuiIconButton-root"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 8.69V4h-4.69L12 .69 8.69 4H4v4.69L.69 12 4 15.31V20h4.69L12 23.31 15.31 20H20v-4.69L23.31 12 20 8.69zM12 18c-.89 0-1.74-.2-2.5-.55C11.56 16.5 13 14.42 13 12s-1.44-4.5-3.5-5.45C10.26 6.2 11.11 6 12 6c3.31 0 6 2.69 6 6s-2.69 6-6 6z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </header>
    <main
      class="makeStyles-main-66"
    >
      <div
        class="makeStyles-contents-67"
      >
        <div
          class="makeStyles-wrap-78"
          data-testid="page-dashboard"
        >
          <div
            class="makeStyles-wrap-79"
          >
            <div
              class="MuiPaper-root MuiCard-root MuiPaper-elevation1 MuiPaper-rounded"
            >
              <div
                class="MuiCardContent-root"
              >
                <form
                  action="#"
                >
                  <div
                    class="MuiFormControl-root makeStyles-input-82"
                  >
                    <label
                      class="MuiFormLabel-root MuiFormLabel-filled Mui-required"
                      for="email"
                    >
                      Email address
                      <span
                        aria-hidden="true"
                        class="MuiFormLabel-asterisk"
                      >
                         *
                      </span>
                    </label>
                    <div
                      class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
                    >
                      <input
                        aria-invalid="false"
                        class="MuiInputBase-input MuiInput-input"
                        id="email"
                        name="email"
                        placeholder="Enter email address"
                        required=""
                        type="email"
                        value="test@example.com"
                      />
                    </div>
                    <div
                      class="makeStyles-error-81"
                    />
                  </div>
                  <div
                    class="MuiFormControl-root makeStyles-input-82"
                  >
                    <label
                      class="MuiFormLabel-root MuiFormLabel-filled Mui-required"
                      for="password"
                    >
                      Password
                      <span
                        aria-hidden="true"
                        class="MuiFormLabel-asterisk"
                      >
                         *
                      </span>
                    </label>
                    <div
                      class="makeStyles-wrap-83"
                    >
                      <div
                        class="MuiInputBase-root MuiInput-root MuiInput-underline makeStyles-input-84 MuiInputBase-formControl MuiInput-formControl"
                      >
                        <input
                          aria-invalid="false"
                          class="MuiInputBase-input MuiInput-input"
                          id="password"
                          name="password"
                          placeholder="Enter password"
                          required=""
                          type="password"
                          value="password"
                        />
                      </div>
                      <div
                        class="makeStyles-toggle-85"
                      >
                        <button
                          class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-containedSizeSmall MuiButton-sizeSmall"
                          data-testid="password-switch"
                          tabindex="0"
                          type="button"
                        >
                          <span
                            class="MuiButton-label"
                          >
                            Show
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                      </div>
                    </div>
                    <div
                      class="makeStyles-error-81"
                    />
                  </div>
                  <div
                    class="makeStyles-login-80"
                  >
                    <button
                      class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
                      tabindex="0"
                      type="submit"
                    >
                      <span
                        class="MuiButton-label"
                      >
                        Login
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </button>
                  </div>
                </form>
              </div>
            </div>
          </div>
        </div>
      </div>
    </main>
    <footer
      class="makeStyles-footer-76"
    >
      <div
        class="makeStyles-wrap-77"
      >
        2021 — 
        <strong>
          予約システム
        </strong>
      </div>
    </footer>
  </div>
</DocumentFragment>
`;

exports[`Index should fail to login 1`] = `
<DocumentFragment>
  <div
    class="MuiSnackbar-root MuiSnackbar-anchorOriginBottomCenter makeStyles-content-31"
  >
    <div
      aria-describedby="client-snackbar"
      class="MuiPaper-root MuiSnackbarContent-root makeStyles-warning-56 makeStyles-content-31 MuiPaper-elevation6"
      direction="up"
      role="alert"
      style="opacity: 1; transform: scale(1, 1); transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,transform 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    >
      <div
        class="MuiSnackbarContent-message"
      >
        <span
          class="makeStyles-message-59"
          id="client-snackbar"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root makeStyles-icon-57 makeStyles-iconVariant-58"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"
            />
          </svg>
          Request failed with status code 400
        </span>
      </div>
      <div
        class="MuiSnackbarContent-action"
      >
        <button
          aria-label="close"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root makeStyles-icon-57"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    class="makeStyles-wrap-32"
  >
    <header
      class="MuiPaper-root MuiAppBar-root MuiAppBar-positionStatic MuiAppBar-colorPrimary makeStyles-root-35 MuiPaper-elevation4"
    >
      <div
        class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
      >
        <h6
          class="MuiTypography-root makeStyles-title-37 MuiTypography-h6"
        >
          予約システム
        </h6>
        <div
          class="makeStyles-grow-38"
        />
        <button
          class="MuiButtonBase-root MuiIconButton-root"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 8.69V4h-4.69L12 .69 8.69 4H4v4.69L.69 12 4 15.31V20h4.69L12 23.31 15.31 20H20v-4.69L23.31 12 20 8.69zM12 18c-.89 0-1.74-.2-2.5-.55C11.56 16.5 13 14.42 13 12s-1.44-4.5-3.5-5.45C10.26 6.2 11.11 6 12 6c3.31 0 6 2.69 6 6s-2.69 6-6 6z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </header>
    <main
      class="makeStyles-main-33"
    >
      <div
        class="makeStyles-contents-34"
      >
        <div
          class="makeStyles-wrap-45"
          data-testid="page-dashboard"
        >
          <div
            class="makeStyles-wrap-46"
          >
            <div
              class="MuiPaper-root MuiCard-root MuiPaper-elevation1 MuiPaper-rounded"
            >
              <div
                class="MuiCardContent-root"
              >
                <form
                  action="#"
                >
                  <div
                    class="MuiFormControl-root makeStyles-input-49"
                  >
                    <label
                      class="MuiFormLabel-root MuiFormLabel-filled Mui-required"
                      for="email"
                    >
                      Email address
                      <span
                        aria-hidden="true"
                        class="MuiFormLabel-asterisk"
                      >
                         *
                      </span>
                    </label>
                    <div
                      class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
                    >
                      <input
                        aria-invalid="false"
                        class="MuiInputBase-input MuiInput-input"
                        id="email"
                        name="email"
                        placeholder="Enter email address"
                        required=""
                        type="email"
                        value="test@example.com"
                      />
                    </div>
                    <div
                      class="makeStyles-error-48"
                    />
                  </div>
                  <div
                    class="MuiFormControl-root makeStyles-input-49"
                  >
                    <label
                      class="MuiFormLabel-root MuiFormLabel-filled Mui-required"
                      for="password"
                    >
                      Password
                      <span
                        aria-hidden="true"
                        class="MuiFormLabel-asterisk"
                      >
                         *
                      </span>
                    </label>
                    <div
                      class="makeStyles-wrap-50"
                    >
                      <div
                        class="MuiInputBase-root MuiInput-root MuiInput-underline makeStyles-input-51 MuiInputBase-formControl MuiInput-formControl"
                      >
                        <input
                          aria-invalid="false"
                          class="MuiInputBase-input MuiInput-input"
                          id="password"
                          name="password"
                          placeholder="Enter password"
                          required=""
                          type="text"
                          value="password"
                        />
                      </div>
                      <div
                        class="makeStyles-toggle-52"
                      >
                        <button
                          class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-containedSizeSmall MuiButton-sizeSmall"
                          data-testid="password-switch"
                          tabindex="0"
                          type="button"
                        >
                          <span
                            class="MuiButton-label"
                          >
                            Hide
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                      </div>
                    </div>
                    <div
                      class="makeStyles-error-48"
                    />
                  </div>
                  <div
                    class="makeStyles-login-47"
                  >
                    <button
                      class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
                      tabindex="0"
                      type="submit"
                    >
                      <span
                        class="MuiButton-label"
                      >
                        Login
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </button>
                  </div>
                </form>
              </div>
            </div>
          </div>
        </div>
      </div>
    </main>
    <footer
      class="makeStyles-footer-43"
    >
      <div
        class="makeStyles-wrap-44"
      >
        2021 — 
        <strong>
          予約システム
        </strong>
      </div>
    </footer>
  </div>
</DocumentFragment>
`;

exports[`Index should show login form 1`] = `
<DocumentFragment>
  <div
    class="makeStyles-wrap-6"
  >
    <header
      class="MuiPaper-root MuiAppBar-root MuiAppBar-positionStatic MuiAppBar-colorPrimary makeStyles-root-9 MuiPaper-elevation4"
    >
      <div
        class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
      >
        <h6
          class="MuiTypography-root makeStyles-title-11 MuiTypography-h6"
        >
          予約システム
        </h6>
        <div
          class="makeStyles-grow-12"
        />
        <button
          class="MuiButtonBase-root MuiIconButton-root"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M20 8.69V4h-4.69L12 .69 8.69 4H4v4.69L.69 12 4 15.31V20h4.69L12 23.31 15.31 20H20v-4.69L23.31 12 20 8.69zM12 18c-.89 0-1.74-.2-2.5-.55C11.56 16.5 13 14.42 13 12s-1.44-4.5-3.5-5.45C10.26 6.2 11.11 6 12 6c3.31 0 6 2.69 6 6s-2.69 6-6 6z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </header>
    <main
      class="makeStyles-main-7"
    >
      <div
        class="makeStyles-contents-8"
      >
        <div
          class="makeStyles-wrap-19"
          data-testid="page-dashboard"
        >
          <div
            class="makeStyles-wrap-20"
          >
            <div
              class="MuiPaper-root MuiCard-root MuiPaper-elevation1 MuiPaper-rounded"
            >
              <div
                class="MuiCardContent-root"
              >
                <form
                  action="#"
                >
                  <div
                    class="MuiFormControl-root makeStyles-input-23"
                  >
                    <label
                      class="MuiFormLabel-root Mui-required"
                      for="email"
                    >
                      Email address
                      <span
                        aria-hidden="true"
                        class="MuiFormLabel-asterisk"
                      >
                         *
                      </span>
                    </label>
                    <div
                      class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-formControl MuiInput-formControl"
                    >
                      <input
                        aria-invalid="false"
                        class="MuiInputBase-input MuiInput-input"
                        id="email"
                        name="email"
                        placeholder="Enter email address"
                        required=""
                        type="email"
                        value=""
                      />
                    </div>
                    <div
                      class="makeStyles-error-22"
                    />
                  </div>
                  <div
                    class="MuiFormControl-root makeStyles-input-23"
                  >
                    <label
                      class="MuiFormLabel-root Mui-required"
                      for="password"
                    >
                      Password
                      <span
                        aria-hidden="true"
                        class="MuiFormLabel-asterisk"
                      >
                         *
                      </span>
                    </label>
                    <div
                      class="makeStyles-wrap-24"
                    >
                      <div
                        class="MuiInputBase-root MuiInput-root MuiInput-underline makeStyles-input-25 MuiInputBase-formControl MuiInput-formControl"
                      >
                        <input
                          aria-invalid="false"
                          class="MuiInputBase-input MuiInput-input"
                          id="password"
                          name="password"
                          placeholder="Enter password"
                          required=""
                          type="password"
                          value=""
                        />
                      </div>
                      <div
                        class="makeStyles-toggle-26"
                      >
                        <button
                          class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-containedSizeSmall MuiButton-sizeSmall"
                          data-testid="password-switch"
                          tabindex="0"
                          type="button"
                        >
                          <span
                            class="MuiButton-label"
                          >
                            Show
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                      </div>
                    </div>
                    <div
                      class="makeStyles-error-22"
                    />
                  </div>
                  <div
                    class="makeStyles-login-21"
                  >
                    <button
                      class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
                      tabindex="0"
                      type="submit"
                    >
                      <span
                        class="MuiButton-label"
                      >
                        Login
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </button>
                  </div>
                </form>
              </div>
            </div>
          </div>
        </div>
      </div>
    </main>
    <footer
      class="makeStyles-footer-17"
    >
      <div
        class="makeStyles-wrap-18"
      >
        2021 — 
        <strong>
          予約システム
        </strong>
      </div>
    </footer>
  </div>
</DocumentFragment>
`;
